--- a/md/继承.md
+++ b/md/继承.md
@@ -12,7 +12,7 @@ function Per(school) {
   this.school = school
 }
 
-Per.prototype = new Person('原型链继承')
+Per.prototype = Object.create(Person.prototype)
 
 //二、借用构造函数继承
 //1、只继承了父类构造函数的属性，没有继承父类原型的属性。
@@ -33,7 +33,7 @@ console.log(p)
 function SubType(name) {
   Person.call(this, name)
 }
-SubType.prototype = new Person()
+SubType.prototype = Object.create(Person.prototype)
 SubType.prototype.constructor = SubType
 
 var sp = new SubType('SubType')
@@ -50,7 +50,7 @@ function content(obj) {
   return new F()
 }
 
-var sub1 = content(new Person('content'))
+var sub1 = content(Object.create(Person.prototype))
 
 //　五、寄生式继承
 
